next
----
  * Support partially rearranged makedumpfile split files.
  * Minor cache improvements and a NULL-pointer dereference fix.
  * Fix test suite for 32-bit architectures.

0.5.4
-----
  * Full support for 64-bit RISC-V.
  * Improve error messages (detailed OS error, optional file names)
  * Bug fixes and minor performance tweaks.

0.5.3
-----
  * Support flattened KDUMP format.

0.5.2
-----
  * Full support for 32-bit Arm.
  * ERASEINFO in the file.eraseinfo.raw attribute.

0.5.1
-----
  * Bitmap of all RAM in the memory.pagemap attribute.
  * Enhance the API with conversions between numeric and string PTE format:
    addrxlat_pte_format(), addrxlat_pte_format_name().
  * Improve compatibility (mawk, Python 3.12).

0.5.0
-----
  * Support SADUMP file format.
  * Add kdump_open_fd() and kdump_open_fdset(). Keep KDUMP_ATTR_FILE_FD
    for (partial) backward compatibility.
  * Redesigned addrxlat callback API.
  * Support KDUMP file sets created by makedumpfile --split.
  * Zstandard compression algorithm
  * AArch64 52-bit VA
  * Address translation tuning with addrxlat.default.* and addrxlat.force.*
    attributes.
    The old mechanism using addrxlat.opts is no longer available.
  * Fix Xen DomU translation type detection for /dev/mem.

0.4.1
-----
  * Automatic translation setup for Linux/aarch64
  * Support AMD EPYC with SME active
  * New attributes:
    - file.mmap_policy
    - file.mmap_cache.hits
    - file.mmap_cache.misses
    - file.read_cache.hits
    - file.read_cache.misses
  * Change *.vmcoreinfo.raw attributes from string to blob
  * Change kdump_vmcoreinfo_raw() and kdump_vmcoreinfo_line()
    - Caller is now the owner of the output string

0.4.0
-----
  * AArch64 paging
  * X86-64 5-level paging
  * Kernel layout auto-detection with kASLR on X86-64
  * Bitmap and blob attribute formats
  * New attributes:
    - file.bitmap attribute
    - file.zero_excluded
    - addrxlat.opts.pre
    - addrxlat.opts.post
    - xen.phys_start