@@ -1,0 +1,4 @@
+#! /bin/sh
+extraparam="flattened = yes"
+. "$srcdir"/elf-basic
+exit 0
