@@ -1,5 +1,6 @@
 next
 ----
+  * Support flattened ELF dump files.
   * Support partially rearranged makedumpfile split files.
   * Minor cache improvements and a NULL-pointer dereference fix.
   * Fix test suite for 32-bit architectures.
